--- a/contact/index.html
+++ b/contact/index.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=nqz8orr8">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=nqz8orr8">
-  <link rel="stylesheet" href="../static/styles/style.css?v=nqz8orr8">
-  <script src="../static/js/jquery-3.7.0.min.js?v=nqz8orr8"></script>
-  <script src="../static/js/popper.min.js?v=nqz8orr8"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=nqz8orr8"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=1rxdjv7c">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=1rxdjv7c">
+  <link rel="stylesheet" href="../static/styles/style.css?v=1rxdjv7c">
+  <script src="../static/js/jquery-3.7.0.min.js?v=1rxdjv7c"></script>
+  <script src="../static/js/popper.min.js?v=1rxdjv7c"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=1rxdjv7c"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -147,11 +147,37 @@
   <footer class="footer">
     <div class="container">
       <div class="row gy-4">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h3>about</h3>
           <p>It is a long established fact that a reader will be It is a long established fact that a reader will be It is a long established fact that a reader will be</p>
         </div>
-        <div class="col-md-4" id="contact">
+        <div class="col-md-3">
+          <h3>Discover</h3>
+          <ul>
+
+            <li>
+              <a aria-current="page" href="../" target="_self"> home </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../about" target="_self"> About Us </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../services" target="_self"> Services </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../gallery" target="_self"> Gallery </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../contact" target="_self"> Contact Us </a>
+            </li>
+
+          </ul>
+        </div>
+        <div class="col-md-3" id="contact">
           <h3>contact</h3>
           <p>
             <svg t="1689851139327" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="69036" width="128" height="128">
@@ -189,7 +215,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=nqz8orr8"></script>
+  <script src="../static/js/main.js?v=1rxdjv7c"></script>
 </body>
 
 </html>
