--- a/about/index.html
+++ b/about/index.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=nqz8orr8">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=nqz8orr8">
-  <link rel="stylesheet" href="../static/styles/style.css?v=nqz8orr8">
-  <script src="../static/js/jquery-3.7.0.min.js?v=nqz8orr8"></script>
-  <script src="../static/js/popper.min.js?v=nqz8orr8"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=nqz8orr8"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=1rxdjv7c">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=1rxdjv7c">
+  <link rel="stylesheet" href="../static/styles/style.css?v=1rxdjv7c">
+  <script src="../static/js/jquery-3.7.0.min.js?v=1rxdjv7c"></script>
+  <script src="../static/js/popper.min.js?v=1rxdjv7c"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=1rxdjv7c"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -101,13 +101,13 @@
       <div id="carouselHome2" class="carousel carousel-common slide" data-bs-interval="5000" data-bs-ride="carousel" data-bs-touch="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../static/images/about/bg.jpg?v=nqz8orr8" alt>
+            <img src="../static/images/about/bg.jpg?v=1rxdjv7c" alt>
           </div>
           <div class="carousel-item">
-            <img src="../static/images/about/bg.jpg?v=nqz8orr8" alt>
+            <img src="../static/images/about/bg.jpg?v=1rxdjv7c" alt>
           </div>
           <div class="carousel-item">
-            <img src="../static/images/about/bg.jpg?v=nqz8orr8" alt>
+            <img src="../static/images/about/bg.jpg?v=1rxdjv7c" alt>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome2" data-bs-slide="prev">
@@ -145,9 +145,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 section-3-left">
-          <img src="../static/images/about/1.jpg?v=nqz8orr8" alt>
+          <img src="../static/images/about/1.jpg?v=1rxdjv7c" alt>
 
-          <img src="../static/images/about/2.jpg?v=nqz8orr8" alt>
+          <img src="../static/images/about/2.jpg?v=1rxdjv7c" alt>
         </div>
         <div class="col-md-6">
           <div class="section-title left">
@@ -288,21 +288,21 @@
 
       <div class="row gy-4">
         <div class="col-md-4">
-          <div><img class="w-100 arch" src="../static/images/about/3.jpg?v=nqz8orr8" alt></div>
+          <div><img class="w-100 arch" src="../static/images/about/3.jpg?v=1rxdjv7c" alt></div>
           <div class="section-title left mt-4">
             <div class="section-title-sub">Owner</div>
             <h4>Olivia Nelson</h4>
           </div>
         </div>
         <div class="col-md-4">
-          <div><img class="w-100 arch" src="../static/images/about/3.jpg?v=nqz8orr8" alt></div>
+          <div><img class="w-100 arch" src="../static/images/about/3.jpg?v=1rxdjv7c" alt></div>
           <div class="section-title left mt-4">
             <div class="section-title-sub">Chef</div>
             <h4>Laura Jones</h4>
           </div>
         </div>
         <div class="col-md-4">
-          <div><img class="w-100 arch" src="../static/images/about/3.jpg?v=nqz8orr8" alt></div>
+          <div><img class="w-100 arch" src="../static/images/about/3.jpg?v=1rxdjv7c" alt></div>
           <div class="section-title left mt-4">
             <div class="section-title-sub">Manager</div>
             <h4>John Smith</h4>
@@ -340,11 +340,37 @@
   <footer class="footer">
     <div class="container">
       <div class="row gy-4">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h3>about</h3>
           <p>It is a long established fact that a reader will be It is a long established fact that a reader will be It is a long established fact that a reader will be</p>
         </div>
-        <div class="col-md-4" id="contact">
+        <div class="col-md-3">
+          <h3>Discover</h3>
+          <ul>
+
+            <li>
+              <a aria-current="page" href="../" target="_self"> home </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../about" target="_self"> About Us </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../services" target="_self"> Services </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../gallery" target="_self"> Gallery </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../contact" target="_self"> Contact Us </a>
+            </li>
+
+          </ul>
+        </div>
+        <div class="col-md-3" id="contact">
           <h3>contact</h3>
           <p>
             <svg t="1689851139327" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="69036" width="128" height="128">
@@ -382,7 +408,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=nqz8orr8"></script>
+  <script src="../static/js/main.js?v=1rxdjv7c"></script>
 </body>
 
 </html>
