--- a/menu/index.html
+++ b/menu/index.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=nqz8orr8">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=nqz8orr8">
-  <link rel="stylesheet" href="../static/styles/style.css?v=nqz8orr8">
-  <script src="../static/js/jquery-3.7.0.min.js?v=nqz8orr8"></script>
-  <script src="../static/js/popper.min.js?v=nqz8orr8"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=nqz8orr8"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=1rxdjv7c">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=1rxdjv7c">
+  <link rel="stylesheet" href="../static/styles/style.css?v=1rxdjv7c">
+  <script src="../static/js/jquery-3.7.0.min.js?v=1rxdjv7c"></script>
+  <script src="../static/js/popper.min.js?v=1rxdjv7c"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=1rxdjv7c"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -97,7 +97,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -109,7 +109,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -121,7 +121,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -133,7 +133,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -145,7 +145,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -157,7 +157,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -173,7 +173,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -185,7 +185,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -197,7 +197,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -209,7 +209,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -221,7 +221,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -233,7 +233,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -249,7 +249,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -261,7 +261,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -273,7 +273,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -285,7 +285,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -297,7 +297,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -309,7 +309,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -325,7 +325,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -337,7 +337,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -349,7 +349,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -361,7 +361,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -373,7 +373,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -385,7 +385,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=nqz8orr8" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=1rxdjv7c" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -428,11 +428,37 @@
   <footer class="footer">
     <div class="container">
       <div class="row gy-4">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h3>about</h3>
           <p>It is a long established fact that a reader will be It is a long established fact that a reader will be It is a long established fact that a reader will be</p>
         </div>
-        <div class="col-md-4" id="contact">
+        <div class="col-md-3">
+          <h3>Discover</h3>
+          <ul>
+
+            <li>
+              <a aria-current="page" href="../" target="_self"> home </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../about" target="_self"> About Us </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../services" target="_self"> Services </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../gallery" target="_self"> Gallery </a>
+            </li>
+
+            <li>
+              <a aria-current="page" href="../contact" target="_self"> Contact Us </a>
+            </li>
+
+          </ul>
+        </div>
+        <div class="col-md-3" id="contact">
           <h3>contact</h3>
           <p>
             <svg t="1689851139327" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="69036" width="128" height="128">
@@ -470,7 +496,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=nqz8orr8"></script>
+  <script src="../static/js/main.js?v=1rxdjv7c"></script>
 </body>
 
 </html>
