--- a/contact/index.html
+++ b/contact/index.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=yr0n78it">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=yr0n78it">
-  <link rel="stylesheet" href="../static/styles/style.css?v=yr0n78it">
-  <script src="../static/js/jquery-3.7.0.min.js?v=yr0n78it"></script>
-  <script src="../static/js/popper.min.js?v=yr0n78it"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=yr0n78it"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=use6yde3">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=use6yde3">
+  <link rel="stylesheet" href="../static/styles/style.css?v=use6yde3">
+  <script src="../static/js/jquery-3.7.0.min.js?v=use6yde3"></script>
+  <script src="../static/js/popper.min.js?v=use6yde3"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=use6yde3"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -215,7 +215,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=yr0n78it"></script>
+  <script src="../static/js/main.js?v=use6yde3"></script>
 </body>
 
 </html>
