--- a/cartoon.html
+++ b/cartoon.html
@@ -5,13 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cartoon</title>
-  <link rel="stylesheet" href="./static/styles/cartoon.css?v=yr0n78it" />
+  <link rel="stylesheet" href="./static/styles/cartoon.css?v=use6yde3" />
 </head>
 
 <body>
   <div class="streamer" style="margin: 200px auto">
     <div class="steam">
       <div></div>
+    </div>
+  </div>
+  <div class="dumblings">
+    <div class="dumbling"></div>
+    <div class="dumbling"></div>
+    <div class="running">
+      <div class="dumbling jumping"></div>
     </div>
   </div>
 </body>
