--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="./static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=yr0n78it">
-  <link rel="stylesheet" href="./static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=yr0n78it">
-  <link rel="stylesheet" href="./static/styles/style.css?v=yr0n78it">
-  <script src="./static/js/jquery-3.7.0.min.js?v=yr0n78it"></script>
-  <script src="./static/js/popper.min.js?v=yr0n78it"></script>
-  <script src="./static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=yr0n78it"></script>
+  <link rel="stylesheet" href="./static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=use6yde3">
+  <link rel="stylesheet" href="./static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=use6yde3">
+  <link rel="stylesheet" href="./static/styles/style.css?v=use6yde3">
+  <script src="./static/js/jquery-3.7.0.min.js?v=use6yde3"></script>
+  <script src="./static/js/popper.min.js?v=use6yde3"></script>
+  <script src="./static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=use6yde3"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -45,7 +45,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="./" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="./static/images/logo.png?v=yr0n78it" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="./static/images/logo.png?v=use6yde3" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -130,7 +130,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img class="w-100" src="./static/images/home/carousel/right.jpg?v=yr0n78it" alt>
+          <img class="w-100" src="./static/images/home/carousel/right.jpg?v=use6yde3" alt>
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <img class="w-100" src="./static/images/home/section-about.jpg?v=yr0n78it" alt>
+          <img class="w-100" src="./static/images/home/section-about.jpg?v=use6yde3" alt>
         </div>
       </div>
     </div>
@@ -163,7 +163,7 @@
         <div class="col-md-4">
           <div class="choose-item">
             <div class="thumb">
-              <img src="./static/images/home/choose/1.jpg?v=yr0n78it" alt>
+              <img src="./static/images/home/choose/1.jpg?v=use6yde3" alt>
             </div>
             <h5>RESIDENTIAL PAINTING</h5>
           </div>
@@ -171,7 +171,7 @@
         <div class="col-md-4">
           <div class="choose-item">
             <div class="thumb">
-              <img src="./static/images/home/choose/2.jpg?v=yr0n78it" alt>
+              <img src="./static/images/home/choose/2.jpg?v=use6yde3" alt>
             </div>
             <h5>COMMERCIAL PAINTING</h5>
           </div>
@@ -179,7 +179,7 @@
         <div class="col-md-4">
           <div class="choose-item">
             <div class="thumb">
-              <img src="./static/images/home/choose/3.jpg?v=yr0n78it" alt>
+              <img src="./static/images/home/choose/3.jpg?v=use6yde3" alt>
             </div>
             <h5>INDUSTRIAL PAINTING</h5>
           </div>
@@ -191,13 +191,13 @@
       </div>
       <div class="row gy-4 choose-partner">
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/1.jpg?v=yr0n78it" alt="dulux">
+          <img src="./static/images/partner/1.jpg?v=use6yde3" alt="dulux">
         </div>
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/2.jpg?v=yr0n78it" alt="wattyl">
+          <img src="./static/images/partner/2.jpg?v=use6yde3" alt="wattyl">
         </div>
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/3.jpg?v=yr0n78it" alt="haymes">
+          <img src="./static/images/partner/3.jpg?v=use6yde3" alt="haymes">
         </div>
       </div>
       <div class="row gy-4 choose-tag">
@@ -234,7 +234,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/1.jpg?v=yr0n78it" alt>
+              <img src="./static/images/gallery/1.jpg?v=use6yde3" alt>
             </div>
             <div class="list-item-content">
               <h4>Painting some wall</h4>
@@ -249,7 +249,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/2.jpg?v=yr0n78it" alt>
+              <img src="./static/images/gallery/2.jpg?v=use6yde3" alt>
             </div>
             <div class="list-item-content">
               <h4>Painting some wall</h4>
@@ -264,7 +264,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/3.jpg?v=yr0n78it" alt>
+              <img src="./static/images/gallery/3.jpg?v=use6yde3" alt>
             </div>
             <div class="list-item-content">
               <h4>Painting some wall</h4>
@@ -427,7 +427,7 @@
     </svg>
   </div>
 
-  <script src="./static/js/main.js?v=yr0n78it"></script>
+  <script src="./static/js/main.js?v=use6yde3"></script>
 </body>
 
 </html>
