--- a/menu/index.html
+++ b/menu/index.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=yr0n78it">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=yr0n78it">
-  <link rel="stylesheet" href="../static/styles/style.css?v=yr0n78it">
-  <script src="../static/js/jquery-3.7.0.min.js?v=yr0n78it"></script>
-  <script src="../static/js/popper.min.js?v=yr0n78it"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=yr0n78it"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=use6yde3">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=use6yde3">
+  <link rel="stylesheet" href="../static/styles/style.css?v=use6yde3">
+  <script src="../static/js/jquery-3.7.0.min.js?v=use6yde3"></script>
+  <script src="../static/js/popper.min.js?v=use6yde3"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=use6yde3"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -97,7 +97,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -109,7 +109,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -121,7 +121,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -133,7 +133,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -145,7 +145,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -157,7 +157,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -173,7 +173,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -185,7 +185,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -197,7 +197,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -209,7 +209,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -221,7 +221,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -233,7 +233,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -249,7 +249,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -261,7 +261,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -273,7 +273,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -285,7 +285,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -297,7 +297,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -309,7 +309,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -325,7 +325,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -337,7 +337,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -349,7 +349,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -361,7 +361,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -373,7 +373,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -385,7 +385,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=yr0n78it" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=use6yde3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -496,7 +496,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=yr0n78it"></script>
+  <script src="../static/js/main.js?v=use6yde3"></script>
 </body>
 
 </html>
