--- a/cartoon2.html
+++ b/cartoon2.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cartoon</title>
-  <link rel="stylesheet" href="./static/styles/cartoon2.css?v=li91r7hs" />
+  <link rel="stylesheet" href="./static/styles/cartoon2.css?v=6b7uxful" />
 </head>
 
 <body>
-  <div class="cartoon2">
-    <div></div>
-  </div>
+  <div class="cartoon2"></div>
+
+  <div class="cartoon3"></div>
+
+  <div class="cartoon4"></div>
 </body>
 
 </html>
