--- a/services/index.html
+++ b/services/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body class="contact">
+<body class="services">
   <div id="loading" class="loading">
     <div class="loading-spin"></div>
   </div>
@@ -77,61 +77,67 @@
   </header>
 
 
-  <section class="section section-contact" id="contactForm">
+  <section class="section">
     <div class="container">
-      <div class="section-title text-center">
-        <h1 class="text-uppercase">Request a free quote</h1>
-      </div>
+      <div class="row gy-5">
+        <div class="col-md-6">
+          <div class="list-item">
+            <div class="list-item-thumb">
+              <img src="../static/images/service/1.jpg?v=6b7uxful" alt>
+            </div>
 
-      <form action class="contact-form m-auto">
-        <div class="row gy-3 mt-2">
-          <div class="col-md-6">
-            <input type="text" name="name" class="form-control" placeholder="Name">
-          </div>
-
-          <div class="col-md-6">
-            <input type="text" name="phone" class="form-control" placeholder="Phone">
-          </div>
-          <div class="col-md-12">
-            <input type="email" name="email" class="form-control" placeholder="Email">
-          </div>
-          <div class="col-md-12">Service Required:</div>
-          <div class="col-md-12">
-            <select class="form-control" name="Service Type">
-              <option value="Residential" selected>Residential</option>
-              <option value="Commercial">Commercial</option>
-              <option value="Industrial">Industrial</option>
-            </select>
-          </div>
-
-          <div class="col-md-12">
-            <input type="text" name="subject" class="form-control" placeholder="Suburb">
-          </div>
-          <div class="col-md-12">
-            <textarea class="form-control" name="msg" rows="3" placeholder="message"></textarea>
-          </div>
-          <div class="col-md-12 text-center">
-            <a href="#" class="btn btn-danger byn-lg">Send Message</a>
+            <div class="list-item-content">
+              <h4>Residential Painting</h4>
+              <p>
+                Your home is your dream and we help you paint it. Every job we take, we assure quality and professional paints for your home. A fresh coat of paint inside or outside your home can
+                make all the difference. We at CAC will understand and help you pick the perfect colours for your homes. We pride ourselves as a professional residential painters in Caulfield and
+                the surrounding areas. Feel free to contact us for no obligation quick quote for residential painting services.
+              </p>
+            </div>
           </div>
         </div>
-      </form>
-    </div>
-  </section>
+        <div class="col-md-6">
+          <div class="list-item">
+            <div class="list-item-thumb">
+              <img src="../static/images/service/2.jpg?v=6b7uxful" alt>
+            </div>
 
-
-  <section class="section section-bg section-call">
-    <div class="overlay dark"></div>
-    <div class="container text-center">
-      <div class="section-title">
-        <a href="tel:+61447272700">
-          <div class="section-title-sub text-white">(+61)4 4727 2700</div>
-          <h2 class="text-white">CALL US</h2>
-        </a>
+            <div class="list-item-content">
+              <h4>Commercial & Industrial Painting</h4>
+              <p>
+                As a business owner or property manager, you understand how important it is to keep your building looking its best. Commercial and industrial painting requires careful planning,
+                coordination, and working in a way that minimizes disruption to your business. As a professional commercial and industrial painting contractor in Caulfield, we have the expertise and
+                equipment to paint a variety of structures including high-rises, offices, churches, and more. Our happy clients for Commercial & Industrial Painting in Caulfield and surrounding
+                areas are our testimony. Contact us today for the best quotes for painting services in Caulfield.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <iframe class="w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.7413828742383!2d145.00380407623592!3d-37.81952617197408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad64258691fcf43%3A0x7dc6282ba4ca1ba8!2s448%20Bridge%20Rd%2C%20Richmond%20VIC%203121!5e0!3m2!1sen!2sau!4v1686577129582!5m2!1sen!2sau" frameborder="0" style="min-height: 350px; border: 0" allowfullscreen aria-hidden="false" tabindex="0"></iframe>
+  <section class="section bg-light">
+    <div class="container">
+      <p>With Crazy About Colours, you can count on time tested materials that have enjoyed decades of worldwide recognition for quality, durability and appeal.</p>
+
+      <p>
+        The entire team at CAC is committed to providing a quality paint finish to homes and businesses around Caulfield. Working tirelessly and to the highest of standards, we ensure that every
+        project goes through a thorough paint preparation process and only utilizes the right materials and the right undercoats.
+      </p>
+      <div class="row gy-4 choose-partner">
+        <div class="col-md-4 text-center">
+          <img src="../static/images/partner/1.jpg?v=6b7uxful" alt="dulux">
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="../static/images/partner/2.jpg?v=6b7uxful" alt="wattyl">
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="../static/images/partner/3.jpg?v=6b7uxful" alt="haymes">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer class="footer">
     <div class="container">
@@ -199,7 +205,6 @@
 
   <script src="../static/js/main.js?v=6b7uxful"></script>
 
-  <script src="../static/js/main.js?v=6b7uxful"></script>
 </body>
 
 </html>
