--- a/cartoon.html
+++ b/cartoon.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cartoon</title>
-  <link rel="stylesheet" href="./static/styles/cartoon.css?v=li91r7hs" />
+  <link rel="stylesheet" href="./static/styles/cartoon.css?v=6b7uxful" />
 </head>
 
 <body>
