--- a/about/index.html
+++ b/about/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="../static/styles/style.css?v=6b7uxful">
-  <script src="../static/js/jquery-3.7.0.min.js?v=6b7uxful"></script>
-  <script src="../static/js/popper.min.js?v=6b7uxful"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=6b7uxful"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="../static/styles/style.css?v=wdygd16n">
+  <script src="../static/js/jquery-3.7.0.min.js?v=wdygd16n"></script>
+  <script src="../static/js/popper.min.js?v=wdygd16n"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=wdygd16n"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="../" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="../static/images/logo.png?v=6b7uxful" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,10 +52,6 @@
 
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="../" target="_self"> home </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../about" target="_self"> About Us </a>
             </li>
 
             <li class="nav-item">
@@ -91,11 +87,11 @@
           </p>
         </div>
         <div class="col-md-3">
-          <img class="w-100" src="../static/images/about/residential.jpg?v=6b7uxful" alt>
+          <img class="w-100" src="../static/images/about/residential.jpg?v=wdygd16n" alt>
         </div>
 
         <div class="col-md-3">
-          <img class="w-100" src="../static/images/about/industrial.jpg?v=6b7uxful" alt>
+          <img class="w-100" src="../static/images/about/industrial.jpg?v=wdygd16n" alt>
         </div>
         <div class="col-md-9">
           <p>
@@ -110,13 +106,13 @@
         <div class="col-md-6">
           <div class="row gy-4 choose-partner">
             <div class="col-md-4 text-center">
-              <img src="../static/images/partner/1.jpg?v=6b7uxful" alt="dulux">
+              <img src="../static/images/partner/1.jpg?v=wdygd16n" alt="dulux">
             </div>
             <div class="col-md-4 text-center">
-              <img src="../static/images/partner/2.jpg?v=6b7uxful" alt="wattyl">
+              <img src="../static/images/partner/2.jpg?v=wdygd16n" alt="wattyl">
             </div>
             <div class="col-md-4 text-center">
-              <img src="../static/images/partner/3.jpg?v=6b7uxful" alt="haymes">
+              <img src="../static/images/partner/3.jpg?v=wdygd16n" alt="haymes">
             </div>
           </div>
         </div>
@@ -129,7 +125,7 @@
 
         <div class="col-md-12 text-center">
           <div class="round-img owner">
-            <img src="../static/images/about/kevin-skydiving.jpg?v=6b7uxful" alt>
+            <img src="../static/images/about/kevin-skydiving.jpg?v=wdygd16n" alt>
           </div>
           <h6 class="mt-3">Kevin Rodgers</h6>
           <p>Owner and Chief Master of Colour</p>
@@ -155,7 +151,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="../" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="../static/images/logo.png?v=6b7uxful" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -164,10 +160,6 @@
 
             <li>
               <a aria-current="page" href="../" target="_self"> home </a>
-            </li>
-
-            <li>
-              <a aria-current="page" href="../about" target="_self"> About Us </a>
             </li>
 
             <li>
@@ -211,7 +203,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=6b7uxful"></script>
+  <script src="../static/js/main.js?v=wdygd16n"></script>
 
 </body>
 
