--- a/gallery/index.html
+++ b/gallery/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="../static/styles/style.css?v=6b7uxful">
-  <script src="../static/js/jquery-3.7.0.min.js?v=6b7uxful"></script>
-  <script src="../static/js/popper.min.js?v=6b7uxful"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=6b7uxful"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="../static/styles/style.css?v=wdygd16n">
+  <script src="../static/js/jquery-3.7.0.min.js?v=wdygd16n"></script>
+  <script src="../static/js/popper.min.js?v=wdygd16n"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=wdygd16n"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="../" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="../static/images/logo.png?v=6b7uxful" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,10 +53,6 @@
 
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="../" target="_self"> home </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../about" target="_self"> About Us </a>
             </li>
 
             <li class="nav-item">
@@ -90,7 +86,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/1.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/1.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -99,7 +95,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/2.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/2.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -108,7 +104,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/3.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/3.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -117,7 +113,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/4.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/4.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -126,7 +122,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/5.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/5.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -135,7 +131,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/6.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/6.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -144,7 +140,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/7.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/7.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -153,7 +149,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/8.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/8.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -162,7 +158,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/9.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/9.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -171,7 +167,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/10.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/10.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -180,7 +176,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/11.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/11.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -189,7 +185,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/12.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/12.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -198,7 +194,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/13.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/13.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -207,7 +203,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/14.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/14.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -216,7 +212,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/15.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/15.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -225,7 +221,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/16.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/16.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -234,7 +230,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/17.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/17.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -243,7 +239,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/18.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/18.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -252,7 +248,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/19.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/19.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -261,7 +257,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/20.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/20.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -270,7 +266,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/21.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/21.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -279,7 +275,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/22.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/22.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -288,7 +284,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/23.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/23.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -297,7 +293,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/24.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/24.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -306,7 +302,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/25.jpg?v=6b7uxful" alt>
+              <img src="../static/images/gallery/25.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -324,7 +320,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="../" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="../static/images/logo.png?v=6b7uxful" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -333,10 +329,6 @@
 
             <li>
               <a aria-current="page" href="../" target="_self"> home </a>
-            </li>
-
-            <li>
-              <a aria-current="page" href="../about" target="_self"> About Us </a>
             </li>
 
             <li>
@@ -380,9 +372,9 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=6b7uxful"></script>
+  <script src="../static/js/main.js?v=wdygd16n"></script>
 
-  <script src="../static/js/main.js?v=6b7uxful"></script>
+  <script src="../static/js/main.js?v=wdygd16n"></script>
 </body>
 
 </html>
