--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="./static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="./static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="./static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="./static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="./static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="./static/images/ico/apple-touch.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="./static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="./static/images/ico/apple-touch.png?v=wdygd16n">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="./static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="./static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="./static/styles/style.css?v=6b7uxful">
-  <script src="./static/js/jquery-3.7.0.min.js?v=6b7uxful"></script>
-  <script src="./static/js/popper.min.js?v=6b7uxful"></script>
-  <script src="./static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=6b7uxful"></script>
+  <link rel="stylesheet" href="./static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="./static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="./static/styles/style.css?v=wdygd16n">
+  <script src="./static/js/jquery-3.7.0.min.js?v=wdygd16n"></script>
+  <script src="./static/js/popper.min.js?v=wdygd16n"></script>
+  <script src="./static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=wdygd16n"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="./" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="./static/images/logo.png?v=6b7uxful" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="./static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,10 +52,6 @@
 
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="./" target="_self"> home </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./about" target="_self"> About Us </a>
             </li>
 
             <li class="nav-item">
@@ -124,7 +120,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img class="w-100" src="./static/images/home/carousel/right.jpg?v=6b7uxful" alt>
+          <img class="w-100" src="./static/images/home/carousel/right.jpg?v=wdygd16n" alt>
         </div>
       </div>
     </div>
@@ -145,7 +141,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <img class="w-100" src="./static/images/home/section-about.jpg?v=6b7uxful" alt>
+          <img class="w-100" src="./static/images/home/section-about.jpg?v=wdygd16n" alt>
         </div>
       </div>
     </div>
@@ -153,31 +149,25 @@
 
   <section id="choose" class="section section-choose">
     <div class="container">
-      <div class="row gx-5 gy-2">
+      <div class="row justify-content-center gx-5 gy-2">
         <div class="col-md-4">
           <div class="choose-item">
             <div class="thumb">
-              <img src="./static/images/home/choose/1.jpg?v=6b7uxful" alt>
+              <img src="./static/images/home/choose/1.jpg?v=wdygd16n" alt>
             </div>
-            <h5>RESIDENTIAL PAINTING</h5>
           </div>
         </div>
+
         <div class="col-md-4">
           <div class="choose-item">
             <div class="thumb">
-              <img src="./static/images/home/choose/2.jpg?v=6b7uxful" alt>
+              <img src="./static/images/home/choose/3.jpg?v=wdygd16n" alt>
             </div>
-            <h5>COMMERCIAL PAINTING</h5>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="choose-item">
-            <div class="thumb">
-              <img src="./static/images/home/choose/3.jpg?v=6b7uxful" alt>
-            </div>
-            <h5>INDUSTRIAL PAINTING</h5>
-          </div>
-        </div>
+      </div>
+      <div class="text-center">
+        <h5>RESIDENTIAL PAINTING && INDUSTRIAL PAINTING</h5>
       </div>
       <div class="section-title text-center mt-5">
         <h1>Why Choose Us</h1>
@@ -185,13 +175,13 @@
       </div>
       <div class="row gy-4 choose-partner">
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/1.jpg?v=6b7uxful" alt="dulux">
+          <img src="./static/images/partner/1.jpg?v=wdygd16n" alt="dulux">
         </div>
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/2.jpg?v=6b7uxful" alt="wattyl">
+          <img src="./static/images/partner/2.jpg?v=wdygd16n" alt="wattyl">
         </div>
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/3.jpg?v=6b7uxful" alt="haymes">
+          <img src="./static/images/partner/3.jpg?v=wdygd16n" alt="haymes">
         </div>
       </div>
       <div class="row gy-4 choose-tag">
@@ -228,7 +218,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/1.jpg?v=6b7uxful" alt>
+              <img src="./static/images/gallery/1.jpg?v=wdygd16n" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -236,7 +226,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/2.jpg?v=6b7uxful" alt>
+              <img src="./static/images/gallery/2.jpg?v=wdygd16n" alt>
             </div>
 
             <div class="list-item-tag">1 May</div>
@@ -245,7 +235,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/3.jpg?v=6b7uxful" alt>
+              <img src="./static/images/gallery/3.jpg?v=wdygd16n" alt>
             </div>
 
             <div class="list-item-tag">1 May</div>
@@ -343,7 +333,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="./" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="./static/images/logo.png?v=6b7uxful" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="./static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -352,10 +342,6 @@
 
             <li>
               <a aria-current="page" href="./" target="_self"> home </a>
-            </li>
-
-            <li>
-              <a aria-current="page" href="./about" target="_self"> About Us </a>
             </li>
 
             <li>
@@ -399,7 +385,7 @@
     </svg>
   </div>
 
-  <script src="./static/js/main.js?v=6b7uxful"></script>
+  <script src="./static/js/main.js?v=wdygd16n"></script>
 
 </body>
 
