--- a/menu/index.html
+++ b/menu/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="../static/styles/style.css?v=6b7uxful">
-  <script src="../static/js/jquery-3.7.0.min.js?v=6b7uxful"></script>
-  <script src="../static/js/popper.min.js?v=6b7uxful"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=6b7uxful"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="../static/styles/style.css?v=wdygd16n">
+  <script src="../static/js/jquery-3.7.0.min.js?v=wdygd16n"></script>
+  <script src="../static/js/popper.min.js?v=wdygd16n"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=wdygd16n"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -49,10 +49,6 @@
 
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="../" target="_self"> home </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="../about" target="_self"> About Us </a>
           </li>
 
           <li class="nav-item">
@@ -105,7 +101,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -117,7 +113,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -129,7 +125,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -141,7 +137,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -153,7 +149,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -165,7 +161,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -181,7 +177,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -193,7 +189,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -205,7 +201,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -217,7 +213,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -229,7 +225,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -241,7 +237,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -257,7 +253,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -269,7 +265,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -281,7 +277,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -293,7 +289,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -305,7 +301,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -317,7 +313,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -333,7 +329,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -345,7 +341,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -357,7 +353,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -369,7 +365,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -381,7 +377,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -393,7 +389,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=6b7uxful" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=wdygd16n" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -441,7 +437,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="../" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="../static/images/logo.png?v=6b7uxful" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -450,10 +446,6 @@
 
             <li>
               <a aria-current="page" href="../" target="_self"> home </a>
-            </li>
-
-            <li>
-              <a aria-current="page" href="../about" target="_self"> About Us </a>
             </li>
 
             <li>
@@ -497,9 +489,9 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=6b7uxful"></script>
+  <script src="../static/js/main.js?v=wdygd16n"></script>
 
-  <script src="../static/js/main.js?v=6b7uxful"></script>
+  <script src="../static/js/main.js?v=wdygd16n"></script>
 </body>
 
 </html>
