--- a/special/index.html
+++ b/special/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=6b7uxful">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=wdygd16n">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=6b7uxful">
-  <link rel="stylesheet" href="../static/styles/style.css?v=6b7uxful">
-  <script src="../static/js/jquery-3.7.0.min.js?v=6b7uxful"></script>
-  <script src="../static/js/popper.min.js?v=6b7uxful"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=6b7uxful"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=wdygd16n">
+  <link rel="stylesheet" href="../static/styles/style.css?v=wdygd16n">
+  <script src="../static/js/jquery-3.7.0.min.js?v=wdygd16n"></script>
+  <script src="../static/js/popper.min.js?v=wdygd16n"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=wdygd16n"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -49,10 +49,6 @@
 
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="../" target="_self"> home </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="../about" target="_self"> About Us </a>
           </li>
 
           <li class="nav-item">
@@ -108,13 +104,13 @@
       <div id="carouselHome2" class="carousel carousel-common slide" data-bs-interval="5000" data-bs-ride="carousel" data-bs-touch="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../static/images/about/bg.jpg?v=6b7uxful" alt>
+            <img src="../static/images/about/bg.jpg?v=wdygd16n" alt>
           </div>
           <div class="carousel-item">
-            <img src="../static/images/about/bg.jpg?v=6b7uxful" alt>
+            <img src="../static/images/about/bg.jpg?v=wdygd16n" alt>
           </div>
           <div class="carousel-item">
-            <img src="../static/images/about/bg.jpg?v=6b7uxful" alt>
+            <img src="../static/images/about/bg.jpg?v=wdygd16n" alt>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome2" data-bs-slide="prev">
@@ -245,7 +241,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="../" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="../static/images/logo.png?v=6b7uxful" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="../static/images/logo.png?v=wdygd16n" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -254,10 +250,6 @@
 
             <li>
               <a aria-current="page" href="../" target="_self"> home </a>
-            </li>
-
-            <li>
-              <a aria-current="page" href="../about" target="_self"> About Us </a>
             </li>
 
             <li>
@@ -301,9 +293,9 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=6b7uxful"></script>
+  <script src="../static/js/main.js?v=wdygd16n"></script>
 
-  <script src="../static/js/main.js?v=6b7uxful"></script>
+  <script src="../static/js/main.js?v=wdygd16n"></script>
 </body>
 
 </html>
